# rust_ecommerce

./: Cargo.toml  index.html
src/: app.rs  routes.rs  types.rs
static/: style.css
